<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">First moscow \nhospice</string>
    <string name="patient_with_colon">Patient</string>
    <string name="patients">Patients</string>
    <string name="patients_list">Patients list</string>
    <string name="claims">Claims</string>
    <string name="patient_first_middle_last_name">Name</string>
    <string name="location">Location</string>
    <string name="patient_location">Yes</string>
    <string name="status">Status</string>
    <string name="patient_name">I.I. Ivanov</string>
    <string name="patient_last_name">Ivanov</string>
    <string name="patient_first_name">Ivan</string>
    <string name="patient_middle_name">Ivanovich</string>
    <string name="patient_date_of_receipt">Date of receipt</string>
    <string name="patient_date_of_discharge">Date of discharge</string>
    <string name="patient_card_title">Information about patient Ivanov I.I.</string>
    <string name="admission_comment">Comment</string>
    <string name="more">More</string>
    <string name="all_patients">All patients</string>
    <string name="new_patient">New patient</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="birth_date">Birth date</string>
    <string name="cancellation">The changes won\'t be saved, do you really want to log out?</string>
    <string name="error">Something went wrong. Try again later.</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_patients_list">There are no patients.\nIf you create a new patient, it will appear here</string>
    <string name="error_saving">Saving failed. Try again later.</string>
    <string name="toast_empty_field">The field cannot be empty.</string>
    <string name="patient_data">Information about patient</string>
    <string name="editing">Editing</string>
    <string name="room">Room</string>
    <string name="admissions">Admissions</string>
    <string name="date">Date</string>
    <string name="date_in">Date of receipt</string>
    <string name="full_admission_date_in">Date \nof receipt</string>
    <string name="date_out">Date of discharge</string>
    <string name="full_admission_date_out">Date \nof discharge</string>
    <string name="add">Add</string>
    <string name="wish_status">Wish status</string>
    <string name="wish">Wish</string>
    <string name="patient_profile">Patient profile</string>
    <string name="change">Change</string>
    <string name="term_of_execution">Term of execution</string>
    <string name="responsible">Responsible</string>
    <string name="responsible_with_colon">Responsible:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="admission">Admission</string>
    <string name="helper_text_date">In format: YYYY-MM-DD</string>
    <string name="plan_data_colon">Plan data</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="add_comment">Add comment</string>
    <string name="completion_date">Completion date</string>
    <string name="completion_time">Completion time</string>
    <string name="patient_selection">Patient selection</string>
    <string name="responsible_selection">Responsible selection</string>
    <string name="description">Description</string>
    <string name="menu_button_description">Menu Button</string>
    <string name="line_divider_description">Divider Line</string>
    <string name="wish_patient_label">Patient</string>
    <string name="wish_executor_label">Executor</string>
    <string name="plan_date">Plan date</string>
    <string name="full_admission_plan_date">plan date</string>
    <string name="fact_date">Fact date</string>
    <string name="outwork">Outwork</string>
    <string name="in_hospice">In hospice</string>
    <string name="expected">Expected</string>
    <string name="discharged">Discharged</string>
    <string name="wishes">Wishes</string>
    <string name="empty_wishes_list">There is not a single wish here. You can create a new one or update the list.</string>
    <string name="date_not_set">Date not set</string>
    <string name="patient_status_is_not_determined"> --- </string>
    <string name="creating_a_wish">Creating a wish</string>
    <string name="planned_hospitalization">Planned hospitalization</string>
    <string name="room_number">Room number</string>
    <string name="actual_date_of_hospitalization">Actual date of hospitalization</string>
    <string name="list_of_wishes_fragment_label" translatable="false">List of wishes fragment label</string>
    <string name="claim_description">Claim description</string>
    <string name="title">Title</string>
    <string name="status_open">Open</string>
    <string name="plan_date_example">20.11.2021</string>
    <string name="plan_date_time_example">20–15</string>
    <string name="ok" />
    <string name="topic">Topic</string>
    <string name="close">Close</string>
    <string name="authorization">Authorization</string>
    <string name="empty_claim_list_text">There is nothing here yet…</string>
    <string name="refresh">Refresh</string>
    <string name="news_item_date">Date</string>
    <string name="them">title</string>
    <string name="executor">executor</string>
    <string name="time">time</string>
    <string name="date_lowercase">data</string>
    <string name="description_lowercase">description</string>
    <string name="visibility_lowercase">visibility</string>
    <string name="medical_staff">medical staff</string>
    <string name="volunteers">volunteers</string>
    <string name="coordinators">coordinators</string>
    <string name="employees_of_the_maintenance_department">employees of the maintenance department</string>
    <string name="managers_of_the_maintenance_department">managers of the maintenance department</string>
    <string name="comment">comment</string>
    <string name="patient">patient</string>
    <string name="plan_date_lowercase">plan date</string>
    <string name="author">author</string>
    <string name="created">created</string>
    <string name="add_comment_lowercase">add comment</string>
    <string name="button_add_comment">button add comment</string>
    <string name="button_close">button close</string>
    <string name="button_visibility">button visibility</string>
    <string name="button_change_status">button change status</string>
    <string name="button_settings">button settings</string>
    <string name="room_lowercase">room</string>
    <string name="button_edit_comment">button edit comment</string>
    <string name="last_name_lowercase">last name</string>
    <string name="first_name_lowercase">first name</string>
    <string name="middle_name_lowercase">middle name</string>
    <string name="birth_date_lowercase">birth date</string>
    <string name="fact_date_lowercase">fact date</string>
    <string name="in_progress">In progress</string>
    <string name="executed">Executed</string>
    <string name="full_name_format">%s %s %s</string>
    <string name="cancelled">Cancelled</string>
    <string name="executes">Executes</string>
    <string name="open">Open</string>
    <string name="not_assigned">NOT ASSIGNED</string>
    <string name="our_mission">Our Mission</string>
    <string name="not_found">USER NOT FOUND</string>
    <string name="take_to_work">take to work</string>
    <string name="cancel_claim">Cancel</string>
    <string name="to_execute">To execute</string>
    <string name="throw_off">Throw off</string>
    <string name="news_item_title">Title</string>
    <string name="news_item_description">Description</string>
    <string name="news_item_publish_date">Date</string>
    <string name="news_item_category">Category</string>
    <string name="news">News</string>
    <string name="information" translatable="false">Information</string>
    <string name="all_news_categories">All categories</string>
    <string name="news_category_advertisement">Advertisement</string>
    <string name="news_category_birthday">Bithday</string>
    <string name="news_category_salary">Salary</string>
    <string name="news_category_union">Union</string>
    <string name="news_category_holiday">Holiday</string>
    <string name="news_category_massage">Massage</string>
    <string name="news_category_gratitude">Gratitude</string>
    <string name="news_category_need_help">Need help</string>
    <string name="news_item_published">Published</string>
    <string name="news_item_publish_time">Time</string>
    <string name="news_item_publication">Publication date</string>
    <string name="news_item_creation">Creation date</string>
    <string name="news_item_author">Author</string>
    <string name="news_item_date_format">DD.MM.YYYY</string>
    <string name="news_control_panel_published">PUBLISHED</string>
    <string name="news_control_panel_not_published">NOT PUBLISHED</string>
    <string name="news_control_panel">News control panel</string>
    <string name="edit_news_helper">Тo the news \n control panel</string>
    <string name="filter_news_helper">Filter \n news</string>
    <string name="sort_news_helper">Sort \n news</string>
    <string name="info_news_helper">Information</string>
    <string name="view_news_item_helper">Show/hide \n description</string>
    <string name="fragment_positive_button" translatable="false">OK</string>
    <string name="empty_news_list">There are no news there.\nIf you create a new news item, it will appear here</string>
    <string name="news_category">Category</string>
    <string name="filter_news">Filter news</string>
    <string name="filter">Filter</string>
    <string name="empty_news_category">Set the category</string>
    <string name="wrong_news_date_period">Wrong period</string>
    <string name="error_removing">Removing failed. Try again later.</string>
    <string name="empty_fields">Fill empty fields</string>
    <string name="no_access_rights_to_status_executed">Only its author or Administrator can move a claim from the \"IN PROGRESS\" status to the \"EXECUTED\" status.</string>
    <string name="simple_error">Error</string>
    <string name="main">Main</string>
    <string name="users">Users</string>
    <string name="blocks">Blocks</string>
    <string name="rooms">Rooms</string>
    <string name="documents">Documents</string>
    <string name="duty_roster">Duty roster</string>
    <string name="all_admissions">ALL ADMISSIONS</string>
    <string name="room_N" translatable="false">№ %s</string>
    <string name="full_admission_fact_date">fact date</string>
</resources>