<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/open_list_item"
        android:title="@string/open"
        android:checkable="true"
        android:checked="false"/>
    <item
        android:id="@+id/in_progress_list_item"
        android:checkable="true"
        android:checked="false"
        android:title="@string/in_progress" />
    <item
        android:id="@+id/cancel_list_item"
        android:title="@string/cancelled"
        android:checkable="true"
        android:checked="false"/>
    <item
        android:id="@+id/executes_list_item"
        android:title="@string/executes"
        android:checkable="true"
        android:checked="false"/>
    <item
        android:id="@+id/confirm_list_item"
        android:title="@string/confirm" />
    <item
        android:id="@+id/cancel_filtering_list_item"
        android:title="@string/throw_off" />
</menu>