<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/claim_filter_dialog_title"
        style="@style/FilteringTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtering"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/item_filter_open"
        style="@style/LargeBlackTextStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:text="@string/open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/claim_filter_dialog_title" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/item_filter_in_progress"
        style="@style/LargeBlackTextStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_view_padding"
        android:checked="false"
        android:text="@string/in_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_filter_open" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/item_filter_executed"
        style="@style/LargeBlackTextStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_view_padding"
        android:checked="false"
        android:text="@string/executed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_filter_in_progress" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/item_filter_cancelled"
        style="@style/LargeBlackTextStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_view_padding"
        android:checked="false"
        android:text="@string/cancelled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_filter_executed" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/claim_filter_cancel_material_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/filtering_claim_title_text_color"
            app:strokeColor="@color/filtering_claim_title_text_color"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/claim_list_filter_ok_material_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@android:string/ok" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>